--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Ouça novos episódios <strong 
-            class="titulo-destaque">toda a semana!
+            class="titulo-destaque">toda semana!
             </strong></h1>
             <p class="apresentacao__conteudo__texto">Saiba notícias sobre o Japão, com muito humor, informações científicas e mundo Geek! Acesse também o feed do ABOUT - by Dropzilla e saiba sobre a cena independente Punk/Hardcore, Rap e Metal do Japão e do mundo</p>
             <div class="apresentacao__links">
