--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre o Dropzilla</h1>
             <p class="apresentacao__conteudo__texto">O Dropzilla é um podcast parte do coletivo Podosfera-NipoBrasileira, formado em 2020 por Rening Masuyama como um drop de notícias curtas sobre o Japão, dentro do podcast Confraria, dos Velhos Confrades. Após alguns meses, o Dropzilla se tornou um podcast independente.</p>
-            <p class="apresentacao__conteudo__texto">Atualmente, o Dropzilla possui como membros Rening Masuyama, Leo da NASA, cientista trazendo ciência com qualidade, Wal, especialista em caos, Mustashi, apresentando o ABOUT Punk/Hardcore junto com o Rening, Victor, fundador do podcast No Japão e host do ABOUT Rap/Hip-hop e Juca, fundador do podcast Wasabi Cast e host do ABOUT Metal aqui no Dropzilla.
+            <p class="apresentacao__conteudo__texto">Atualmente, o Dropzilla possui como membros Rening Masuyama, Leo da NASA, cientista trazendo ciência com qualidade, Wal, especialista em caos, Mustache, apresentando o ABOUT Punk/Hardcore junto com o Rening, Victor, fundador do podcast No Japão e host do ABOUT Rap/Hip-hop e Juca, fundador do podcast Wasabi Cast e host do ABOUT Metal aqui no Dropzilla.
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Logo vertical do podcast Dropzilla">
